delete button style fix on mobile

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -326,6 +326,8 @@ form select {
 }
 
 .update-btns input {
+  -webkit-appearance: none;
+  -moz-appearance: none;
   list-style-type: none;
   margin-left: 10px;
   text-transform: uppercase;
